--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,40 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>To Do App</title>
+    <title>
+      {% block title %}
+          To Do App
+      {% endblock title %}
+    </title>
+
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">To Do App</a>
+      
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">To Do App</a>
+
+        <ul class="navbar-nav ml-auto">
+          
+          {% if user.is_authenticated %}  
+            <li class="nav-item">
+              <a class="nav-link" href=" {% url 'logout' %} ">Logout</a>
+            </li>
+
+          {% else %}
+
+          <li class="nav-item">
+            <a class="nav-link" href=" {% url 'login' %} ">Login</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href=" {% url 'login' %} ">SignUp</a>
+          </li>
+          {% endif %}
+
+        </ul>
+
+      </div>
     </nav>
       
     <div class="container">
